--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -1,4 +1,5 @@
 .button {
+  cursor: pointer;
   text-align: center;
   text-decoration: none;
   margin: 5px;
