--- a/src/components/Signature/index.css
+++ b/src/components/Signature/index.css
@@ -7,4 +7,5 @@
   font-family: 'Comfortaa';
   font-size: 18px;
   font-weight: 300;
+  width: max-content;
 }
